# StressTester

HttpStressClientC/: CMakeLists.txt  README.md  main.c
HttpStressClientC/include/: common.h  configuration.h  endpoint.h  worker.h
HttpStressClientC/source/: common.c  configuration.c  endpoint.c  worker.c
SimpleJavaService/: pom.xml
SimpleJavaService/docker/: docker-compose.yaml
SimpleJavaService/src/main/java/ru/alex/burdovitsin/simplejavaservice/: SimpleJavaServiceApplication.java
SimpleJavaService/src/main/java/ru/alex/burdovitsin/simplejavaservice/controller/: SimpleHttpController.java
SimpleJavaService/src/main/resources/: application.properties
SimpleJavaService/src/test/java/ru/alex/burdovitsin/simplejavaservice/: SimpleJavaServiceApplicationTests.java
